Fix T77764: VSE: snap strip to current frame does not move associated effect strips keyframes along

Maniphest Tasks: T77764

Differential Revision: https://developer.blender.org/D7996